--- a/dz/index.html
+++ b/dz/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+ <div id="add">   
     <header>
         <section> 
         <h2 class="visible_hidden">Навигация</h2>
@@ -19,7 +20,7 @@
                 <ul class="right_nav">
                     <li><a href="#">Домой</a></li>
                     <li><a href="#">Проект</a></li>
-                    <li><a href="#">Блог</a></li>
+                    <li><a href="./blog.html">Блог</a></li>
                 </ul>
             </nav>
           </div>
@@ -140,21 +141,22 @@
                             <p class="text_blog">Хорошо известно, что читатель будет отвлекаться на читабельный контент страницы </p>
                         </div>
                         <div class="blog_list">
-                            <div class="blog_item">
+                            <div class="blog_item"  v-for="(item, index) in dataBlog" :key="item.id">
                                 <div class="img_blog">
-                                    <img src="/dz/img/blogPhoto_1.png" alt="">
+                                    <img :src="item.image" alt="">
+                                    <p class="img_blog_text">{{ item.imgText }}</p>
                                 </div>
                                 <div class="sub_content_blog">
                                   <div class="sub_blog_left">
-                                    <h3>Создадим лучший макет перепланировки</h3>
+                                    <h3>{{ item.subTitle }}</h3>
                                   </div>
                                   <div class="sub_blog_right">
-                                    <span>26 Декабрь 2022</span>
-                                    <a href="#"></a>
+                                    <span>{{ item.subDate }}</span>
+                                    <a href="./blog.html"></a>
                                   </div>  
                                 </div>
                             </div>
-                            <div class="blog_item">
+                            <!-- <div class="blog_item">
                                 <div class="img_blog">
                                     <img src="/dz/img/blogPhoto_2.png" alt="">
                                 </div>
@@ -181,7 +183,7 @@
                                         <a href="#"></a>
                                     </div> 
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
             </div>
@@ -226,8 +228,38 @@
             </div>
         </section>
     </footer>
+</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.7.8"></script>
-    <script src="app.vue"></script>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    
+    <script>
+     const add = Vue.createApp({
+        data(){
+            return {
+                dataBlog: [
+                {
+                    image: './img/blogPhoto_1.png',
+                    imgText: 'Дизайн кухни',
+                    subTitle: 'Создадим лучший макет перепланировки',
+                    subDate: '26 Декабрь 2022',
+                },
+                {
+                    image: './img/blogPhoto_2.png',
+                    imgText: 'Дизайн для жизни',
+                    subTitle: 'Лучшие интерьерные идеи по низкой цене',
+                    subDate: '22 Декабрь 2022',
+                },
+                {
+                    image: './img/blogPhoto_3.png',
+                    imgText: 'Дизайн Интерьера',
+                    subTitle: 'Лучшие интерьерные решения для офисов',
+                    subDate: '25 Декабрь 2022',
+                },
+            ],
+
+            }
+        }
+     }).mount('#add')
+    </script>
 </body>
 </html>
